SDA: fix logging configuration on Windows  * add workaround configurator's local file issue